# npu-playground

./: .clangd  .gitignore  CMakeLists.txt  README.md
bpu/: gshare.sv  history_shift.sv  saturate.sv  timer.v
buffer/: Buffer.py  buffer_test.py
ca_model/: CMakeLists.txt  run.sh  test.sh
ca_model/src/: Signal.hpp  circular_fifo.hpp  dff_base.hpp  dff_updater.hpp  pe.hpp
ca_model/test/: main.cpp  test_dff.hpp  test_dff_base.hpp  test_dff_updater.hpp
csrc/: circular_fifo.hpp  dff.hpp  dff_base.hpp  dff_updater.hpp
fifo/: ChecksumRTL_noparam__pickled.v  FullAdder_noparam__pickled.v  Makefile  pymtl.py
gdma/: dataExtractor.py  dataReader.py  finalWrUbReq.py  gdma.py  gm.py  rawWrUbReqGen.py  reqAlign.py  reqTable.py  ub.py
gemm_ws/: Makefile  README.md  common.cpp  common.h  config.h  gemm.cpp  gemm.h  gemm_simulator  gemm_ws.cpp  gemm_ws.h  instr.h  main.cpp  mapping.cpp  mapping.h  operation.cpp  operation.h  tile.h
mapping/: matrix_mul.py
memory/: mem_allocate_test.py
onnxim/: CMakeLists.txt  README.md
onnxim/include/: Tensor.h  common.h  mapping.h  matmul_onnx.py  model.h
onnxim/scripts/: matmul_onnx.py  test_onnx.py
onnxim/scripts/model/: config.json  matmul.onnx
onnxim/src/: common.h  main.cpp
pymtl/: basic.py  check_sum_fl.py  checksum.py  pe.py  reg.py  reg_two.py  regincr-sim.vcd  sort.py  sort_cl.py  sort_rtl.py
simulator/: GCD.cpp  Makefile  Module.h  Reg.h  Wire.h  counter  counter.cpp  inport.h  main.cpp  outport.h  pe.h  port.h  test.Module.h  test_INPUT.h  test_Reg.h  tile.h  wildcard
systolic_array/: README.md  matmul.py  matmul_test.py  test.py
test/: dff_test.cpp  dff_updater_test.cpp
transpose/: basic_transpose.py
vsrc/sync_fifo/: FIFO.sv  FIFO_tb.sv  README.md
